--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": ["./jest-setup.ts"]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -38,12 +39,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.8.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
+    "eslint-plugin-testing-library": "^6.4.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.0",
     "typescript": "~5.3.3"
