--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.10",
     "react-test-renderer": "^18.3.1"
   },
@@ -54,6 +55,7 @@
     "eslint-plugin-testing-library": "^6.4.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.0",
+    "react-native-react-query-devtools": "^1.3.1",
     "typescript": "~5.3.3"
   },
   "private": true
