--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.2",
+    "axios": "^1.7.7",
     "expo": "^52.0.3",
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
