--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "~4.0.0",
     "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
     "react-test-renderer": "^18.3.1"
   },
   "devDependencies": {
