--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "react-test-renderer": "^18.3.1"
+    "react-test-renderer": "^18.3.1",
+    "@shopify/flash-list": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
