--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "@shopify/flash-list": "1.7.1",
     "@tanstack/react-query": "^5.60.2",
     "axios": "^1.7.7",
     "expo": "^52.0.3",
@@ -43,11 +44,11 @@
     "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "react-test-renderer": "^18.3.1",
-    "@shopify/flash-list": "1.7.1"
+    "react-test-renderer": "^18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@tanstack/eslint-plugin-query": "^5.60.1",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.8.1",
