--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.60.2",
     "axios": "^1.7.7",
     "expo": "^52.0.3",
+    "expo-auth-session": "~6.0.1",
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
@@ -31,8 +32,8 @@
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
-    "expo-web-browser": "~14.0.0",
-    "firebase": "^11.0.1",
+    "expo-web-browser": "~14.0.1",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
