--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "^52.0.3",
     "expo-auth-session": "~6.0.1",
     "expo-constants": "~17.0.2",
+    "expo-dev-client": "~5.0.9",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.2",
@@ -40,14 +41,14 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-react-query-devtools": "^1.3.10",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "react-test-renderer": "^18.3.1",
-    "expo-dev-client": "~5.0.9"
+    "react-test-renderer": "^18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -63,7 +64,7 @@
     "eslint-plugin-testing-library": "^6.4.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.0",
-    "react-native-react-query-devtools": "^1.3.1",
+    "npm-check-updates": "^17.1.14",
     "typescript": "~5.3.3"
   },
   "private": true
